--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "dev:QWER": "node --no-warnings QWER watch",
     "dev:watch": "npm-run-all -p -r dev:QWER dev:i18n dev:sveltekit ",
     "dev": "npm-run-all -s build:QWER dev:watch",
+    "build:partytown": "partytown copylib static/~partytown",
     "build:i18n": "npx typesafe-i18n --no-watch",
     "build:sveltekit": "vite build",
     "build:QWER_Without_Meta": "node --no-warnings QWER buildWithoutMeta",
     "build:QWER": "node --no-warnings QWER build",
-    "build": "npm-run-all -s build:QWER build:i18n build:sveltekit",
+    "build": "npm-run-all -s build:QWER build:i18n build:partytown build:sveltekit",
     "preview": "vite preview",
     "clean:husky": "rimraf .husky",
     "clean:sveltekit": "rimraf .svelte-kit",
@@ -55,63 +56,64 @@
     "*.{html,scss,css,svelte,ts,js}": "prettier --write --plugin-search-dir=."
   },
   "devDependencies": {
-    "@builder.io/partytown": "^0.7.6",
-    "@changesets/cli": "^2.26.2",
-    "@iconify-json/akar-icons": "^1.1.18",
-    "@iconify-json/bxs": "^1.1.7",
-    "@iconify-json/carbon": "^1.1.19",
-    "@iconify-json/fluent-emoji-flat": "^1.1.12",
-    "@iconify-json/ic": "^1.1.14",
-    "@iconify-json/line-md": "^1.1.26",
-    "@iconify-json/mdi": "^1.1.54",
-    "@iconify-json/tabler": "^1.1.87",
-    "@iconify-json/vscode-icons": "^1.1.28",
+    "@builder.io/partytown": "^0.8.0",
+    "@changesets/cli": "^2.26.1",
+    "@iconify-json/akar-icons": "^1.1.16",
+    "@iconify-json/bxs": "^1.1.6",
+    "@iconify-json/carbon": "^1.1.16",
+    "@iconify-json/fluent-emoji-flat": "^1.1.11",
+    "@iconify-json/ic": "^1.1.13",
+    "@iconify-json/line-md": "^1.1.24",
+    "@iconify-json/mdi": "^1.1.51",
+    "@iconify-json/tabler": "^1.1.74",
+    "@iconify-json/vscode-icons": "^1.1.25",
     "@kwchang0831/qwer": "link:QWER",
     "@kwchang0831/svelte-qwer": "link:",
-    "@sveltejs/adapter-netlify": "1.0.0-next.85",
-    "@sveltejs/adapter-node": "1.0.0-next.104",
-    "@sveltejs/adapter-static": "1.0.0-next.49",
-    "@sveltejs/adapter-vercel": "1.0.0-next.85",
-    "@sveltejs/kit": "1.0.0-next.581",
+    "@sveltejs/adapter-netlify": "2.0.7",
+    "@sveltejs/adapter-node": "1.2.4",
+    "@sveltejs/adapter-static": "2.0.2",
+    "@sveltejs/adapter-vercel": "2.4.3",
+    "@sveltejs/kit": "1.16.3",
     "@types/flexsearch": "^0.7.3",
-    "@types/lz-string": "^1.5.0",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@unocss/core": "^0.47.6",
-    "@unocss/preset-icons": "^0.47.6",
-    "@unocss/preset-uno": "^0.47.6",
-    "@unocss/reset": "^0.47.6",
-    "@unocss/transformer-compile-class": "^0.47.6",
-    "@unocss/transformer-directives": "^0.47.6",
-    "@unocss/transformer-variant-group": "^0.47.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "@unocss/core": "^0.51.12",
+    "@unocss/extractor-svelte": "^0.51.12",
+    "@unocss/preset-icons": "^0.51.12",
+    "@unocss/preset-uno": "^0.51.12",
+    "@unocss/reset": "^0.51.12",
+    "@unocss/transformer-compile-class": "^0.51.12",
+    "@unocss/transformer-directives": "^0.51.12",
+    "@unocss/transformer-variant-group": "^0.51.12",
     "cross-env": "^7.0.3",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "flexsearch": "^0.7.31",
-    "gitmoji-cli": "^7.1.0",
+    "gitmoji-cli": "^8.2.2",
     "husky": "^8.0.3",
-    "katex": "^0.16.8",
-    "lint-staged": "^13.3.0",
+    "imagetools-core": "^4.0.2",
+    "katex": "^0.16.7",
+    "lint-staged": "^13.2.2",
     "lz-string": "^1.5.0",
     "medium-zoom": "^1.0.8",
     "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
     "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.65.1",
-    "svelte": "^3.59.2",
-    "svelte-check": "^2.10.3",
-    "svelte-preprocess": "^4.10.7",
+    "prettier-plugin-svelte": "^2.10.0",
+    "rimraf": "^5.0.0",
+    "sass": "^1.62.1",
+    "svelte": "^3.59.1",
+    "svelte-check": "^3.3.2",
+    "svelte-preprocess": "^5.0.3",
     "tippy.js": "^6.3.7",
-    "tslib": "^2.6.1",
-    "typesafe-i18n": "^5.26.1",
-    "typescript": "^4.9.5",
-    "unocss": "^0.47.6",
+    "tslib": "^2.5.0",
+    "typesafe-i18n": "^5.24.3",
+    "typescript": "^5.0.4",
+    "unocss": "^0.51.12",
     "unocss-preset-scrollbar": "^0.2.1",
-    "vite": "^4.4.9",
-    "vite-imagetools": "^4.0.19"
+    "vite": "^4.3.5",
+    "vite-imagetools": "^5.0.3"
   }
 }
