--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "vite-imagetools": "^5.0.3"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.2",
     "sharp": "^0.32.5"
   }
 }
